attempt to fix view issue with hire-expo section description on small height devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1428,6 +1428,24 @@ $menu-transition-duration: 0.4s;
 .hire-expo {
   width: 100%;
   height: calc(#{$viewportHeight} - #{$navHeight});
+  // @media (max-width: $tablet-width) and (min-width: $mobile-width) {
+  @media (max-height: 750px) and (min-height: 650px) {
+    height: calc(#{$viewportHeight} - #{$navHeight} + 20vh);
+    &__boxes__box__description {
+      display: block;
+    }
+  }
+  @media (max-height: 650px) {
+    &__boxes__box__description {
+      display: none;
+    }
+  }
+  // @media (max-height: 750px) {
+  // height: calc(#{$viewportHeight} - #{$navHeight} + 10vh);
+  // }
+  // @media (max-height: 650px) {
+  //   height: calc(#{$viewportHeight} - #{$navHeight} + 20vh);
+  // }
   position: relative;
   overflow: hidden;
   background: black;
@@ -1475,6 +1493,12 @@ $menu-transition-duration: 0.4s;
       position: relative;
       width: 300px;
       height: 300px;
+      // @media (max-height: 750px) {
+      //   width: 200px;
+      //   height: 200px;
+      // }
+      // width: 50%;
+      // height: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
